RET-3610 (#950)